@@ -1,11 +1,12 @@
-
 package com.ai.organizer.library.controller;
 
 import com.ai.organizer.library.domain.Document;
 import com.ai.organizer.library.domain.UserHighlight;
+import com.ai.organizer.library.domain.UserSummary; // <--- Import
 import com.ai.organizer.library.dto.StarDTO;
 import com.ai.organizer.library.repository.DocumentRepository;
 import com.ai.organizer.library.repository.UserHighlightRepository;
+import com.ai.organizer.library.repository.UserSummaryRepository; // <--- Import
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -14,6 +15,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -25,35 +27,50 @@ import java.util.stream.Collectors;
 public class GalaxyController {
 
     private final UserHighlightRepository highlightRepository;
+    private final UserSummaryRepository summaryRepository; // <--- Injeção Nova
     private final DocumentRepository documentRepository;
 
     @GetMapping("/stars")
     public List<StarDTO> getMyStars(@AuthenticationPrincipal Jwt jwt) {
-        // CORREÇÃO: Extração do ID em uma variável "effectively final"
         final String userId = extractUserId(jwt);
 
-        // 1. Busca todos os highlights do usuário
-        List<UserHighlight> highlights = highlightRepository.findAll().stream()
-                // Agora o compilador aceita, pois userId nunca muda após a inicialização
-                .filter(h -> h.getUserId().equals(userId))
-                .toList();
-
-        // 2. Mapa de Títulos
+        // 1. Mapa de Títulos (Cache rápido)
         Map<String, String> titleMap = documentRepository.findByUserIdOrderByCreatedAtDesc(userId).stream()
                 .collect(Collectors.toMap(Document::getFileHash, Document::getTitle, (a, b) -> a));
 
-        // 3. Monta o DTO
-        return highlights.stream().map(h -> new StarDTO(
+        List<StarDTO> stars = new ArrayList<>();
+
+        // 2. Busca Highlights (Estrelas Normais)
+        List<UserHighlight> highlights = highlightRepository.findAll().stream()
+                .filter(h -> h.getUserId().equals(userId))
+                .toList();
+
+        stars.addAll(highlights.stream().map(h -> new StarDTO(
                 String.valueOf(h.getId()),
                 h.getContent(),
                 h.getFileHash(),
                 titleMap.getOrDefault(h.getFileHash(), "Documento Desconhecido"),
                 h.getCreatedAt(),
-                h.getType(), userId
-        )).collect(Collectors.toList());
+                h.getType(),
+                h.getPositionJson()
+        )).toList());
+
+        // 3. Busca Resumos (Estrelas Especiais - "Resumes")
+        List<UserSummary> summaries = summaryRepository.findByUserId(userId);
+
+        stars.addAll(summaries.stream().map(s -> new StarDTO(
+                "summary-" + s.getId(), // Prefixo para evitar colisão de ID
+                "Resumo IA: " + (s.getGeneratedText() != null ? s.getGeneratedText().substring(0, Math.min(50, s.getGeneratedText().length())) + "..." : "Gerando..."),
+                s.getFileHash(),
+                titleMap.getOrDefault(s.getFileHash(), "Documento"),
+                s.getCreatedAt(),
+                "RESUME", // <--- TIPO ESPECIAL
+                null // Resumos não têm posição no PDF
+        )).toList());
+
+        return stars;
     }
 
-    // Helper method para limpar o código e resolver o problema do escopo
     private String extractUserId(Jwt jwt) {
         String claimId = jwt.getClaimAsString("preferred_username");
         return (claimId != null) ? claimId : jwt.getSubject();
